--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
         class="w-100 shadow-1-strong rounded mb-4" />
     </div>
   </div>
-  <!-- Галерея -->>
+  <!-- Галерея -->
   <div class="row">
     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
       <a
